# MonitoringIndicator

./: .gitignore  CLAUDE.md  README.md  SPECIFICATION.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.example.yaml
mt4/: TradeController.mq4
src/: __init__.py  alert_monitor.py  config.py  logger.py  main.py  order_executor.py  signal_parser.py  trade_control.py
tests/: __init__.py  test_alert_monitor.py  test_config.py  test_order_executor.py  test_signal_parser.py  test_trade_control.py
